# smartdrain-agent-upgrade

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Jenkinsfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  requirements.txt
ai_service/: .env.example  .gitignore  AGENTS.md  AI_SERVICE_PLAN.md  BUILD_INFO.md  Dockerfile  HTTP_API_DESIGN.md  NEXT_STEP_PROMPT.md  README.md  START_PROMPT.md  pyproject.toml  pytest.ini  requirements.txt
ai_service/.codex/: config.toml
ai_service/_yolo/: README.md  __init__.py  constants.py  fake_yolo_predictor.py
ai_service/analysis/: README.md  __init__.py  callback_payloads.py  decision_mapper.py  job_id.py  service.py  validator.py  xgboost_adapter.py
ai_service/docs/: CODEX_SETUP.md  IMPLEMENTATION_SUMMARY.md  MODEL_CARD.md  SCENARIO_MATRIX.md  XGBOOST_SCOPE.md  backend_callback_reliability.md  http_api_design.md  korean_service_guide.md  model_integration_plan.md  pre_commit_checklist.md  runtime_setup.md
ai_service/http/: README.md  __init__.py  app.py  callback_sender.py  config.py  routes.py
ai_service/image_source/: README.md  __init__.py  constants.py  mock_provider.py  service.py
ai_service/mock_data/: README.md
ai_service/model/: sewer_xgboost_model.json
ai_service/requirements/: dev.txt  postgres.txt  xgboost.txt  yolo-poc.txt
ai_service/samples/: README.md
ai_service/scripts/: __init__.py  _bootstrap.py  check_samples.py  generate_mock_data.py  reset_mock_runtime.py  run_pending_analysis.py  setup_venv.ps1  setup_venv.sh  smoke_analysis.py
ai_service/xgboost/: .env.example  (+14 more)
(+432 files in other folders)
