[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-risk-xgb-service"
version = "0.2.0"
description = "Mock-first XGBoost risk analysis service for drain flood monitoring"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "scikit-learn>=1.4,<2",
  "xgboost>=2.1,<4",
]

[tool.setuptools]
package-dir = {"" = "xgboost/src"}

[tool.setuptools.packages.find]
where = ["xgboost/src"]

[tool.pytest.ini_options]
testpaths = ["xgboost/tests"]
pythonpath = ["xgboost/src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
